# mae298-autonomous-vehicle-gnc-astrobee

./: Dockerfile  README.md  docker-compose.volume.yml  docker-compose.yml  install.sh  run.sh  runcams.sh  runtest.sh  rununix.sh  runv.sh  runwin.sh
bag/: README.md  readbag.py
experiment_ws/src/: CMakeLists.txt  newshoulderdata.csv  package.xml  shoulderdata.csv
experiment_ws/src/launch/: classsim.launch
experiment_ws/src/marker/: CMakeLists.txt  package.xml
experiment_ws/src/marker/launch/: class_sim.launch  marker.launch
experiment_ws/src/marker/src/: marker_node.cpp
experiment_ws/src/marker/urdf/: armarker_40.dae  marker.urdf
experiment_ws/src/mover/: CMakeLists.txt  package.xml
experiment_ws/src/mover/include/: PublisherSubscriber.h
experiment_ws/src/mover/launch/: mover.launch
experiment_ws/src/mover/src/: mover_node.cpp  mover_node2.cpp
experiment_ws/src/urdf/: marker.urdf
experiments/launch/: classsim.launch  sim.launch
experiments/urdf/: armarker_40.stl  marker.urdf
