<?xml version="1.0"?>
<package>
  <name>description</name>
  <version>0.0.0</version>
  <description>
    Astrobee add-ons
  </description>
  <author email="jdekarske@ucdavis.edu">
    Jason Dekarske
  </author>
  <maintainer email="@ucdavis.edu">
    dude
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <export/>
</package>
